Add HowItWorks section

--- a/info/index.html
+++ b/info/index.html
@@ -46,6 +46,130 @@
         <div class="smallContainer">
             <h1 class="heading">Jak to działa</h1>
             <h3 class="subheading">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h3>
+            <div class="infoSteps">
+                <div class="decorativeWrapper infoStep active">
+                    <div class="infoStepCollapsed">
+                        <h4 class="infoStepHeading"><span>Krok 1. </span>Wybierz ilość badaczy UX.</h4>
+                        <div class="infoStepIcon">
+                            <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path
+                                    d="M12.5585 10.776L10.2785 13.104V5.04002C10.2785 4.77601 10.0626 4.56006 9.79858 4.56006C9.53457 4.56006 9.31862 4.77602 9.31862 5.04002V13.08L7.03867 10.8481C6.84665 10.6561 6.53459 10.6561 6.36667 10.8481C6.17465 11.0401 6.17465 11.3522 6.36667 11.5201L9.84662 14.9281L13.2546 11.4481C13.4466 11.2561 13.4466 10.9441 13.2546 10.7761C13.0385 10.584 12.7505 10.584 12.5585 10.776Z"
+                                    fill="#0A3180" />
+                                <path
+                                    d="M15.4151 0H4.18308C1.99922 0 0.199219 1.8 0.199219 3.98404V15.216C0.199219 17.4001 1.99922 19.2001 4.18308 19.2001H15.4151C17.5993 19.2001 19.3993 17.4001 19.3993 15.216V3.98404C19.3993 1.8 17.5993 0 15.4152 0H15.4151ZM18.439 15.216C18.439 16.896 17.0709 18.24 15.4151 18.24L4.18308 18.2401C2.50313 18.2401 1.15913 16.872 1.15913 15.2162V3.98417C1.15913 2.30421 2.52722 0.96021 4.18308 0.96021H15.4151C17.095 0.96021 18.439 2.3283 18.439 3.98417V15.216Z"
+                                    fill="#0A3180" />
+                            </svg>
+                        </div>
+                    </div>
+                    <div class="infoStepContent">
+                        <p class="infoStepText">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Amet augue nibh ultrices et imperdiet molestie turpis sapien
+                        elit. Tincidunt tempor pretium facilisis nulla semper ultrices. Pulvinar mi leo donec ipsum. Lorem ipsum dolor sit amet,
+                        consectetur adipiscing elit. Amet augue nibh ultrices et imperdiet molestie turpis sapien elit. Tincidunt tempor pretium
+                        facilisis nulla semper ultrices. Pulvinar mi leo donec ipsum.</p>
+                        <img class="infoStepImage" src="https://via.placeholder.com/250x150" />
+                    </div>
+                </div>
+                <div class="decorativeWrapper infoStep">
+                    <div class="infoStepCollapsed">
+                        <h4 class="infoStepHeading"><span>Krok 2. </span>Wgraj projekt lub podaj adres URL.</h4>
+                        <div class="infoStepIcon">
+                            <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path
+                                    d="M12.5585 10.776L10.2785 13.104V5.04002C10.2785 4.77601 10.0626 4.56006 9.79858 4.56006C9.53457 4.56006 9.31862 4.77602 9.31862 5.04002V13.08L7.03867 10.8481C6.84665 10.6561 6.53459 10.6561 6.36667 10.8481C6.17465 11.0401 6.17465 11.3522 6.36667 11.5201L9.84662 14.9281L13.2546 11.4481C13.4466 11.2561 13.4466 10.9441 13.2546 10.7761C13.0385 10.584 12.7505 10.584 12.5585 10.776Z"
+                                    fill="#0A3180" />
+                                <path
+                                    d="M15.4151 0H4.18308C1.99922 0 0.199219 1.8 0.199219 3.98404V15.216C0.199219 17.4001 1.99922 19.2001 4.18308 19.2001H15.4151C17.5993 19.2001 19.3993 17.4001 19.3993 15.216V3.98404C19.3993 1.8 17.5993 0 15.4152 0H15.4151ZM18.439 15.216C18.439 16.896 17.0709 18.24 15.4151 18.24L4.18308 18.2401C2.50313 18.2401 1.15913 16.872 1.15913 15.2162V3.98417C1.15913 2.30421 2.52722 0.96021 4.18308 0.96021H15.4151C17.095 0.96021 18.439 2.3283 18.439 3.98417V15.216Z"
+                                    fill="#0A3180" />
+                            </svg>
+                        </div>
+                    </div>
+                    <div class="infoStepContent">
+                        <p class="infoStepText">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Amet augue nibh ultrices et
+                            imperdiet molestie turpis sapien
+                            elit. Tincidunt tempor pretium facilisis nulla semper ultrices. Pulvinar mi leo donec ipsum. Lorem ipsum
+                            dolor sit amet,
+                            consectetur adipiscing elit. Amet augue nibh ultrices et imperdiet molestie turpis sapien elit. Tincidunt
+                            tempor pretium
+                            facilisis nulla semper ultrices. Pulvinar mi leo donec ipsum.</p>
+                        <img class="infoStepImage" src="https://via.placeholder.com/250x150" />
+                    </div>
+                </div>
+                <div class="decorativeWrapper infoStep">
+                    <div class="infoStepCollapsed">
+                        <h4 class="infoStepHeading"><span>Krok 3. </span>Opisz czego dotyczy zadanie</h4>
+                        <div class="infoStepIcon">
+                            <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path
+                                    d="M12.5585 10.776L10.2785 13.104V5.04002C10.2785 4.77601 10.0626 4.56006 9.79858 4.56006C9.53457 4.56006 9.31862 4.77602 9.31862 5.04002V13.08L7.03867 10.8481C6.84665 10.6561 6.53459 10.6561 6.36667 10.8481C6.17465 11.0401 6.17465 11.3522 6.36667 11.5201L9.84662 14.9281L13.2546 11.4481C13.4466 11.2561 13.4466 10.9441 13.2546 10.7761C13.0385 10.584 12.7505 10.584 12.5585 10.776Z"
+                                    fill="#0A3180" />
+                                <path
+                                    d="M15.4151 0H4.18308C1.99922 0 0.199219 1.8 0.199219 3.98404V15.216C0.199219 17.4001 1.99922 19.2001 4.18308 19.2001H15.4151C17.5993 19.2001 19.3993 17.4001 19.3993 15.216V3.98404C19.3993 1.8 17.5993 0 15.4152 0H15.4151ZM18.439 15.216C18.439 16.896 17.0709 18.24 15.4151 18.24L4.18308 18.2401C2.50313 18.2401 1.15913 16.872 1.15913 15.2162V3.98417C1.15913 2.30421 2.52722 0.96021 4.18308 0.96021H15.4151C17.095 0.96021 18.439 2.3283 18.439 3.98417V15.216Z"
+                                    fill="#0A3180" />
+                            </svg>
+                        </div>
+                    </div>
+                    <div class="infoStepContent">
+                        <p class="infoStepText">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Amet augue nibh ultrices et
+                            imperdiet molestie turpis sapien
+                            elit. Tincidunt tempor pretium facilisis nulla semper ultrices. Pulvinar mi leo donec ipsum. Lorem ipsum
+                            dolor sit amet,
+                            consectetur adipiscing elit. Amet augue nibh ultrices et imperdiet molestie turpis sapien elit. Tincidunt
+                            tempor pretium
+                            facilisis nulla semper ultrices. Pulvinar mi leo donec ipsum.</p>
+                        <img class="infoStepImage" src="https://via.placeholder.com/250x150" />
+                    </div>
+                </div>
+                <div class="decorativeWrapper infoStep">
+                    <div class="infoStepCollapsed">
+                        <h4 class="infoStepHeading"><span>Krok 4. </span>Sprawdzimy poprawność testu</h4>
+                        <div class="infoStepIcon">
+                            <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path
+                                    d="M12.5585 10.776L10.2785 13.104V5.04002C10.2785 4.77601 10.0626 4.56006 9.79858 4.56006C9.53457 4.56006 9.31862 4.77602 9.31862 5.04002V13.08L7.03867 10.8481C6.84665 10.6561 6.53459 10.6561 6.36667 10.8481C6.17465 11.0401 6.17465 11.3522 6.36667 11.5201L9.84662 14.9281L13.2546 11.4481C13.4466 11.2561 13.4466 10.9441 13.2546 10.7761C13.0385 10.584 12.7505 10.584 12.5585 10.776Z"
+                                    fill="#0A3180" />
+                                <path
+                                    d="M15.4151 0H4.18308C1.99922 0 0.199219 1.8 0.199219 3.98404V15.216C0.199219 17.4001 1.99922 19.2001 4.18308 19.2001H15.4151C17.5993 19.2001 19.3993 17.4001 19.3993 15.216V3.98404C19.3993 1.8 17.5993 0 15.4152 0H15.4151ZM18.439 15.216C18.439 16.896 17.0709 18.24 15.4151 18.24L4.18308 18.2401C2.50313 18.2401 1.15913 16.872 1.15913 15.2162V3.98417C1.15913 2.30421 2.52722 0.96021 4.18308 0.96021H15.4151C17.095 0.96021 18.439 2.3283 18.439 3.98417V15.216Z"
+                                    fill="#0A3180" />
+                            </svg>
+                        </div>
+                    </div>
+                    <div class="infoStepContent">
+                        <p class="infoStepText">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Amet augue nibh ultrices et
+                            imperdiet molestie turpis sapien
+                            elit. Tincidunt tempor pretium facilisis nulla semper ultrices. Pulvinar mi leo donec ipsum. Lorem ipsum
+                            dolor sit amet,
+                            consectetur adipiscing elit. Amet augue nibh ultrices et imperdiet molestie turpis sapien elit. Tincidunt
+                            tempor pretium
+                            facilisis nulla semper ultrices. Pulvinar mi leo donec ipsum.</p>
+                        <img class="infoStepImage" src="https://via.placeholder.com/250x150" />
+                    </div>
+                </div>
+                <div class="decorativeWrapper infoStep">
+                    <div class="infoStepCollapsed">
+                        <h4 class="infoStepHeading"><span>Krok 5. </span>Odbierz wyniki badania</h4>
+                        <div class="infoStepIcon">
+                            <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path
+                                    d="M12.5585 10.776L10.2785 13.104V5.04002C10.2785 4.77601 10.0626 4.56006 9.79858 4.56006C9.53457 4.56006 9.31862 4.77602 9.31862 5.04002V13.08L7.03867 10.8481C6.84665 10.6561 6.53459 10.6561 6.36667 10.8481C6.17465 11.0401 6.17465 11.3522 6.36667 11.5201L9.84662 14.9281L13.2546 11.4481C13.4466 11.2561 13.4466 10.9441 13.2546 10.7761C13.0385 10.584 12.7505 10.584 12.5585 10.776Z"
+                                    fill="#0A3180" />
+                                <path
+                                    d="M15.4151 0H4.18308C1.99922 0 0.199219 1.8 0.199219 3.98404V15.216C0.199219 17.4001 1.99922 19.2001 4.18308 19.2001H15.4151C17.5993 19.2001 19.3993 17.4001 19.3993 15.216V3.98404C19.3993 1.8 17.5993 0 15.4152 0H15.4151ZM18.439 15.216C18.439 16.896 17.0709 18.24 15.4151 18.24L4.18308 18.2401C2.50313 18.2401 1.15913 16.872 1.15913 15.2162V3.98417C1.15913 2.30421 2.52722 0.96021 4.18308 0.96021H15.4151C17.095 0.96021 18.439 2.3283 18.439 3.98417V15.216Z"
+                                    fill="#0A3180" />
+                            </svg>
+                        </div>
+                    </div>
+                    <div class="infoStepContent">
+                        <p class="infoStepText">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Amet augue nibh ultrices et
+                            imperdiet molestie turpis sapien
+                            elit. Tincidunt tempor pretium facilisis nulla semper ultrices. Pulvinar mi leo donec ipsum. Lorem ipsum
+                            dolor sit amet,
+                            consectetur adipiscing elit. Amet augue nibh ultrices et imperdiet molestie turpis sapien elit. Tincidunt
+                            tempor pretium
+                            facilisis nulla semper ultrices. Pulvinar mi leo donec ipsum.</p>
+                        <img class="infoStepImage" src="https://via.placeholder.com/250x150" />
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
     <footer class="footer">
@@ -60,7 +184,7 @@
             </div>
         </div>
     </footer>
-    <script src="js/script.js"></script>
+    <script src="../js/script.js"></script>
 </body>
 
 </html>
