Create IsItForMe section

--- a/index.html
+++ b/index.html
@@ -23,15 +23,17 @@
                         <div class="menuLinks">
                             <a href="/info/#czy-to-dla-mnie" class="menuLink">Czy to dla mnie?</a>
                             <a href="/info/#jak-wyglada-badanie" class="menuLink">Jak wygląda badanie?</a>
-                            <a href="/#wykonaj-test" class="menuLink">Koszt badania</a>
-                            <a href="#pomoc" class="menuLink">
-                                <button class="secondaryButton">Pomoc</button>
+                            <a href="#wykonaj-test" class="menuLink">Koszt badania</a>
+                            <a href="#pomoc" class="menuLink linkButton">
+                                <div class="secondaryButton">
+                                    Pomoc
+                                </div>
                             </a>
-                            <a href="/#wykonaj-test" class="menuLink">
-                                <button class="primaryButton">
+                            <a href="/#wykonaj-test" class="menuLink linkButton">
+                                <div class="primaryButton">
                                     <img class="buttonIcon" src="images/buttonIcon.svg" alt="" />
                                     Wykonaj test UX
-                                </button>
+                                </div>
                             </a>
                         </div>
                     </div>
@@ -46,10 +48,13 @@
                         użytkownikami.</h1>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In a tristique lorem, non ornare est. Cras feugiat ante id orci
                         gravida, eget consequat leo sagittis.</p>
-                        <button class="primaryButton">
-                            <img class="buttonIcon" src="images/buttonIcon.svg" alt="" />
-                            Wykonaj test UX
-                        </button>
+                        
+                        <a href="/#wykonaj-test" class="linkButton">
+                            <div class="primaryButton">
+                                <img class="buttonIcon" src="images/buttonIcon.svg" alt="" />
+                                Wykonaj test UX 
+                            </div>
+                        </a>
                     </div>
                     <div class="movieWrapper">
                         <div class="movie">
@@ -384,10 +389,12 @@
                 <div class="container">
                     <div class="wrapper">
                         <h2>Skorzystaj z wiedzy i doświadczenia specjalistów i uniknij błędów przy wdrożeniu.</h2>
-                        <button class="primaryButton">
-                            <img class="buttonIcon" src="images/buttonIcon.svg" alt="" />
-                            Wykonaj test UX
-                        </button>
+                        <a href="/#wykonaj-test" class="linkButton">
+                            <div class="primaryButton">
+                                    <img class="buttonIcon" src="images/buttonIcon.svg" alt="" />
+                                    Wykonaj test UX
+                            </div>
+                        </a>
                     </div>
                 </div>
             </section>
@@ -404,10 +411,12 @@
                             <p class="email">pomoc@uxirl.pl</p>
                         </div>
                     </div>
-                    <button class="secondaryButton">
-                        <img class="buttonIcon" src="images/calendarIcon.svg" alt="" />
-                        Zarezerwuj spotkanie w Calendly
-                    </button>
+                    <a href="#" class="linkButton">
+                        <button class="secondaryButton">
+                            <img class="buttonIcon" src="images/calendarIcon.svg" alt="" />
+                            Zarezerwuj spotkanie w Calendly
+                        </button>
+                    </a>
                 </div>
             </section>
             <img src="images/documents-2.svg" class="drawing" alt="">
