--- a/index.html
+++ b/index.html
@@ -412,10 +412,10 @@
                         </div>
                     </div>
                     <a href="#" class="linkButton">
-                        <button class="secondaryButton">
+                        <div class="secondaryButton">
                             <img class="buttonIcon" src="images/calendarIcon.svg" alt="" />
                             Zarezerwuj spotkanie w Calendly
-                        </button>
+                        </div>
                     </a>
                 </div>
             </section>
